# python-whatsapp-bot

./: .gitignore  LICENSE  README.md  __init__.py  api_requests.py  convseration.txt  deploy.md  dispatcher.py  markup.py  message.py  oo.py  pyproject.toml  setup.cfg  user_context.py  whatsapp.py
.github/: FUNDING.yml
__pycache__/: README copy.md  __init__.py  data copy.py  pyproject copy.toml  que copy.py
__pycache__/src/whatsapp/: dispatcher.py  message.py  user_context.py
src/: __init__.py
src/python_whatsapp_bot/: __init__.py  dispatcher.py  handler_classes.py  message.py  whatsapp.py
src/python_whatsapp_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python_whatsapp_bot/whatsapp/: __init__.py  dispatcher.py  message.py  user_context.py  whatsapp.py
src/whatsapp/: dispatcher.py  message.py  user_context.py  whatsapp.py
